--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
         <div class="container">
           <div class="collapse navbar-collapse menu" id="navbarNav">
             <div class="nav-item">
-              <button type="button" class="button__light">
+              <a
+                href="https://github.com/danielacoltri/banco_de_dados_checkpoint_3"
+                type="button"
+                class="button__light"
+              >
                 Repositório do projeto <b>AQUI</b>!
-              </button>
+              </a>
             </div>
           </div>
         </div>
@@ -67,7 +71,7 @@
           </div>
 
           <a
-            href="#"
+            href="https://www.figma.com/proto/PUoqGHsVodbrGrptxEGC3l/emConjunto?node-id=1%3A2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2"
             class="button__secundary"
             alt="Botão ver mais"
             target="_blank"
