--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="nav-item">
               <a
                 href="https://github.com/danielacoltri/banco_de_dados_checkpoint_3"
+                target="_blank"
                 type="button"
                 class="button__light"
               >
